[dependencies]
error-chain = "0.4.2"
kernel32-sys = "0.2"
lazy_static = "0.2"
winapi = "0.2"

[package]
authors = ["Simonas Kazlauskas <git@kazlauskas.me>", "Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
build = "build.rs"
description = "A cross-platform shared library loader."
documentation = "https://tyleo.github.io/sharedlib/"
exclude = [
    ".build",
    ".git",
    ".gitignore",
    ".gradle",
    ".travis.yml",
    "appveyor.yml",
    "build.gradle",
    "cargo.lock",
    "gradle",
    "gradlew",
    "gradlew.bat",
    "README.md",
    "settings.gradle",
    "target",
    "test"
]
keywords = [
    "dll",
    "dylib",
    "libloading",
    "library",
    "shared"
]
license = "ISC"
name = "sharedlib"
repository = "https://github.com/Tyleo/sharedlib.git"
version = "5.0.0"
